--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,12 @@
 # Site settings
-title: Your awesome title
+title: shinonome-lab
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  The best way to learn is to teach.So this blog is simply aimed at strengthening what
+  I`ve learned.And if anyone of you could benefit from this,it will be great pleasure!
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
+twitter_username: nichijou_lab
 github_username:  jekyll
 
 # Build settings
