--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: nichijou_lab
-github_username:  jekyll
+github_username:  shinonome-lab
 
 # Build settings
 markdown: kramdown
